<resources>
    <string name="app_name">411Pro</string>

    <!--budget button-->
    <string name="budget_button">Budget</string>

    <!--NOT USED-->
    <string name="waffle_button">Waffle</string>
    <string name="toast_button">Toast</string>
    <string name="pancake_button">Pancake</string>
    <string name="muffin_button">Muffin</string>
    <string name="bagel_button">Bagel</string>
    <string name="croissant_button">Croissant</string>
    <string name="breakfast_menu">Breakfast Menu</string>

    <!--NOT USED-->
    <string name="frappe_button">Frappe</string>
    <string name="cappuccino_button">Cappuccino</string>
    <string name="latte_button">Latte</string>
    <string name="espresso_button">Espresso</string>
    <string name="doppio_button">Doppio</string>
    <string name="arabica_button">Arabica</string>
    <string name="coffee_menu">Coffee Menu</string>

    <!--breakfast names-->
    <string-array name="breakfastNames">
        <item>Breakfast Menu</item>
        <item>Waffle</item>
        <item>Toast</item>
        <item>Pancake</item>
        <item>Muffin</item>
        <item>Bagel</item>
        <item>Croissant</item>
    </string-array>

    <!--coffee names-->
    <string-array name="coffeeNames">
        <item>Coffee Menu</item>
        <item>Frappe</item>
        <item>Cappuccino</item>
        <item>Latte</item>
        <item>Espresso</item>
        <item>Doppio</item>
        <item>Arabica</item>
    </string-array>

    <!--pastry names-->
    <string-array name="pastriesNames">
        <item>Pastry Menu</item>
        <item>Raspberry Pie</item>
        <item>Danish</item>
        <item>Strudel</item>
        <item>Cannoli</item>
        <item>Bear Claw</item>
    </string-array>

    <!--payment details-->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="creditCardNum">Credit Card Number</string>
    <string name="selectDateText">Select Date</string>
    <string name="submitText">Submit</string>
    <string name="checkoutText">Checkout</string>

    <!--enter budget-->
    <string name="enterBudget">Enter Budget Here</string>
</resources>