<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/breakfast_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:paddingTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/pancake"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:text="@string/pancake_button"/>

        <Button
            android:id="@+id/toast"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginLeft="30dp"
            android:text="@string/toast_button"/>

        <Button
            android:id="@+id/croissant"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            android:text="@string/croissant_button"/>

        <Button
            android:id="@+id/muffin"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="30dp"
            android:text="@string/muffin_button"/>

        <Button
            android:id="@+id/bagel"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            android:text="@string/bagel_button"/>

        <Button
            android:id="@+id/waffle"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="30dp"
            android:text="@string/waffle_button"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>