<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_payment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:paddingTop="40dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <EditText

            android:id="@+id/txt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/txt_credit_card_number"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/creditCardNum"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btndate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#8000ff"
            android:minHeight="30dp"
            android:text="@string/selectDateText"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="normal|bold"/>
        <TextView
            android:id= "@+id/selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btndate"
            android:layout_marginTop="10dp"
            android:textColor="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            />
        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#8000ff"
            android:minHeight="30dp"
            android:text="@string/submitText"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="15dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>